fixed broken game page link

--- a/game.html
+++ b/game.html
@@ -49,8 +49,10 @@
         </div>
       </div>
     </div>
-    <div class="button">
-        <button>NEXT</button>
+    <div class="buton">
+        <div class="button-holder">
+            <button>NEXT</button>
+        </div>
     </div>
     <script src="game.js"></script>
   </body>
